# petcare-companion

./: .dockerignore  .env.example  .env.production  .gitignore  ALL_ERRORS_FIXED.md  API_KEY_FIX.md  AUTHENTICATION_FIX.md  Dockerfile  ERRORS_FIXED.md  ERROR_500_FIXED.md  FIX_AND_RUN.md  HOW_TO_RESTART.txt  LOGIN_FIRST.bat  MUST_RESTART_BACKEND.md  QUICK_VOICE_FIX.md  QUICK_VOICE_TEST.md  README.md  README_VOICE_FIX.md  RESTART_BACKEND.bat  RESTART_NOW.bat  TEST_VOICE_RESPONSES.md  VOICE_ASSISTANT_PERFECT.md  VOICE_FIX_COMPLETE.md  VOICE_FIX_SUMMARY.md  VOICE_RECOGNITION_FIX.md  VOICE_RESPONSE_FIX.md  WAKE_WORD_SETUP.md  add_archive_fields.py  add_weight_tracking.py  alembic.ini  check_connection.py  check_env.py  docker-compose.yml  file_encryption.key  initialize_mumbai_clinics.py  list_gemini_models.py  package-lock.json  pyproject.toml  requirements.txt  seed_database.py  (+8 more)
PetPal/: Kiro full guide.md  users-table-config.md
alembic/: README  env.py
app/: __init__.py  main.py
docs/: API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  ERROR_HANDLING.md  INFRASTRUCTURE_GUIDE.md  PERFORMANCE_OPTIMIZATION.md
frontend/: .env.example  .env.production  ACCESSIBILITY_PERFORMANCE.md  API_INTEGRATION.md  API_INTEGRATION_PATTERNS.md  APPOINTMENT_UI_IMPLEMENTATION.md  CARE_TRACKING_IMPLEMENTATION.md  CARE_UI_COMPONENTS.md  COMPONENT_DOCUMENTATION.md  DASHBOARD_IMPLEMENTATION.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DESIGN_SYSTEM.md  Dockerfile  GETTING_STARTED.md  HEALTH_RECORDS_IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  NOTIFICATIONS_IMPLEMENTATION.md  README.md  SETTINGS_IMPLEMENTATION.md  STYLE_GUIDE.md  TASK_19.18_SUMMARY.md  TASK_19.20_SUMMARY.md  TASK_19.22_SUMMARY.md  TESTING_GUIDE.md  index.html  (+9 more)
(+562 files in other folders)
